refactor uploads
