# routes/upload.js
@@ -1,13 +1,6 @@
 const Route = use('Route')
 
+Route.post('/upload/file', 'UploadsController.file').middleware('auth')
+Route.post('/upload/url', 'UploadsController.url').middleware('auth')
+Route.delete('/upload/:filename', 'UploadsController.destroy').middleware('auth')
 
-Route.delete('/upload/:filename', 'Uploads/UploadsController.destroy')
-  .middleware('auth')
-
-
-Route.post('/upload/picture/file', 'Uploads/Picture/FileController.store')
-  .middleware('auth')
-
-
-Route.post('/upload/picture/url', 'Uploads/Picture/UrlController.store')
-  .middleware('auth')
